--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -13,73 +13,47 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: ./.github/actions/build
-
+      - name: Print output
+        run: echo Building of node application is starting..
   deploy-dev:
     runs-on: self-hosted
     needs: [build]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: ./.github/actions/deploy
-        with:
-          port: 1010
-          environment: 'DEV'
-
+      - name: Print output
+        run: echo Deployment to DEV has started..
   test-dev:
     runs-on: self-hosted
     needs: [deploy-dev]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
-        with:
-          repository: 'OlegsBrown/course-js-api-framework.git'
-          path: 'api-tests'
-      - uses: ./.github/actions/test
-        with:
-          environment: 'DEV'
-
+      - name: Print output
+        run: echo Testing BOOKS test set on DEV has started..
   deploy-stg:
     runs-on: self-hosted
     needs: [test-dev]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: ./.github/actions/deploy
-        with:
-          port: 2020
-          environment: 'STG'
-
+      - name: Print output
+        run: echo Deployment to STG has started..
   test-stg:
     runs-on: self-hosted
     needs: [deploy-stg]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
-        with:
-          repository: 'OlegsBrown/course-js-api-framework.git'
-          path: 'api-tests'
-      - uses: ./.github/actions/test
-        with:
-          environment: 'STG'
-
+      - name: Print output
+        run: echo Testing BOOKS test set on STG has started..
   deploy-prd:
     runs-on: self-hosted
     needs: [test-stg]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: ./.github/actions/deploy
-        with:
-          port: 3030
-          environment: 'PRD'
-
+      - name: Print output
+        run: echo Deployment to PRD has started..
   test-prd:
     runs-on: self-hosted
     needs: [deploy-prd]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
-        with:
-          repository: 'OlegsBrown/course-js-api-framework.git'
-          path: 'api-tests'
-      - uses: ./.github/actions/test
-        with:
-          environment: 'PRD'
+      - name: Print output
+        run: echo Testing BOOKS test set on PRD has started..
