Add sequence to workflow actions

--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -30,6 +30,10 @@ jobs:
     needs: [deploy-dev]
     steps:
       - uses: actions/checkout@v3.5.2
+      - uses: actions/checkout@v3.5.2
+        with:
+          repository: 'OlegsBrown/course-js-api-framework.git'
+          path: 'api-tests'
       - uses: ./.github/actions/test
         with:
           environment: 'DEV'
@@ -49,6 +53,10 @@ jobs:
     needs: [deploy-stg]
     steps:
       - uses: actions/checkout@v3.5.2
+      - uses: actions/checkout@v3.5.2
+        with:
+          repository: 'OlegsBrown/course-js-api-framework.git'
+          path: 'api-tests'
       - uses: ./.github/actions/test
         with:
           environment: 'STG'
@@ -68,6 +76,10 @@ jobs:
     needs: [deploy-prd]
     steps:
       - uses: actions/checkout@v3.5.2
+      - uses: actions/checkout@v3.5.2
+        with:
+          repository: 'OlegsBrown/course-js-api-framework.git'
+          path: 'api-tests'
       - uses: ./.github/actions/test
         with:
           environment: 'PRD'
