--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@v3.5.2
       - uses: actions/checkout@v3.5.2
         with:
-          repository: 'OlegsBrown/course-js-api-framework.git'
+          repository: 'OlegsBrown/course-js-api-framework'
           path: 'api-tests'
       - uses: ./.github/actions/test
         with:
@@ -55,7 +55,7 @@ jobs:
       - uses: actions/checkout@v3.5.2
       - uses: actions/checkout@v3.5.2
         with:
-          repository: 'OlegsBrown/course-js-api-framework.git'
+          repository: 'OlegsBrown/course-js-api-framework'
           path: 'api-tests'
       - uses: ./.github/actions/test
         with:
@@ -78,7 +78,7 @@ jobs:
       - uses: actions/checkout@v3.5.2
       - uses: actions/checkout@v3.5.2
         with:
-         repository: 'OlegsBrown/course-js-api-framework.git'
+         repository: 'OlegsBrown/course-js-api-framework'
           path: 'api-tests'
       - uses: ./.github/actions/test
         with:
